<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/blurbg1">

    <LinearLayout
        android:id="@+id/score1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:id="@+id/Highscrore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hscore"
            android:textSize="20sp"
            android:textColor="@color/mintgreen"
            android:fontFamily="@font/poppins_semibold_italic"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/Brown"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/score"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/itemContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/imge_line"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp"/>


    <TextView
        android:id="@+id/livesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/mintgreen"
        android:text="@string/lives"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/highCarbonZone"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/highcarb"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/highcarb"
                android:textSize="16sp"
                android:textColor="@color/grayG"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp">

            <LinearLayout
                android:id="@+id/lowCarbonZone"
                android:contentDescription="@string/low"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/lowcarb"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lowcarb"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/q3bg"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>