<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="270dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/rewrdbtn1">

    <ImageView
        android:id="@+id/imgReward"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="fitCenter"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/points" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doyouwant"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/point"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/btnredeem1"
        android:layout_width="100.7dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/green"
        android:text="@string/redeem"
        android:textSize="14sp"
        android:textColor="@android:color/white" />
</LinearLayout>
