<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_with_border"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">

        <LinearLayout
            android:id="@+id/eggtoastM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@color/q3bg"
            android:orientation="vertical"
            android:padding="16dp">

        <ImageView
                android:id="@+id/imageView1"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/imge_line"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/resultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_italic"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/choose1"
            android:textSize="18sp"
            android:textColor="#9011470A"
            android:fontFamily="@font/poppinsmedium"
            android:layout_marginBottom="10dp"/>


        <LinearLayout
            android:id="@+id/eggtstpic"
            android:layout_width="371dp"
            android:layout_height="67dp"
            android:layout_gravity="center"

            android:layout_marginBottom="28dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/captureButton"
                android:layout_width="145dp"
                android:layout_height="55dp"
                android:layout_marginStart="27dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/circular2"
                android:fontFamily="@font/poppinsmedium"
                android:textColor="@color/mintgreen"
                android:text="@string/capturebtn"
                android:textAlignment="center" />

            <Button
                android:id="@+id/pickImageButton"
                android:layout_width="165dp"
                android:layout_height="55dp"
                android:background="@drawable/circular"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/gallery" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_bfastdone1"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/circular1"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/done"
            android:textAlignment="center" />

    </LinearLayout>

</ScrollView>
